--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -1,6 +1,76 @@
-nav{
+@import "../../scss/responsive.scss";
+
+nav {
     height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    a {
+        transition: all 0.3s ease-in-out;
+
+        @include small_screen {
+            display: none;
+        }
+
+        &:hover {
+            background-color: rgb(244, 201, 144);
+            padding: 0% 20px;
+            border-radius: 5px;
+            scale: 1.05;
+        }
+    }
+
+    .left {
+        flex: 3;
+        display: flex;
+        align-items: center;
+        gap: 40px;
+
+        .logo {
+            font-size: 30px;
+            font-weight: bold;
+            display: flex;
+            gap: 10px;
+            align-items: center;
+
+            img {
+                width: 65px;
+                height: 65px;
+            }
+            span{
+                @include medium_screen {
+                    display: none;
+                }
+                @include small_screen {
+                    display: initial;
+                }   
+            }
+        }
+    }
+
+    .right {
+        flex: 2;
+        align-items: center;
+        display: flex;
+        justify-content: flex-end;
+        gap: 20px;
+        background-color: rgb(244, 201, 144);
+        height: 100%;
+
+        a {
+            padding: 10px 20px;
+            margin: 10px;
+        }
+
+        .login {
+            background-color: rgb(8, 235, 163);
+            border-radius: 5px;
+        }
+
+        .register {
+            background-color: rgb(51, 255, 0);
+            border-radius: 5px;
+        }
+    }
 }
