Implement responsive Navbar with toggleable menu and menu icon

--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -38,13 +38,15 @@ nav {
                 width: 65px;
                 height: 65px;
             }
-            span{
+
+            span {
                 @include medium_screen {
                     display: none;
                 }
+
                 @include small_screen {
                     display: initial;
-                }   
+                }
             }
         }
     }
@@ -57,6 +59,10 @@ nav {
         gap: 20px;
         background-color: rgb(244, 201, 144);
         height: 100%;
+
+        @include medium_screen {
+            background-color: transparent;
+        }
 
         a {
             padding: 10px 20px;
@@ -71,6 +77,47 @@ nav {
         .register {
             background-color: rgb(51, 255, 0);
             border-radius: 5px;
+        }
+
+        .menuIcon {
+            display: none;
+            z-index: 1000;
+
+            img {
+                width: 40px;
+                height: 40px;
+                cursor: pointer;
+            }
+
+            @include small_screen {
+                display: inline;
+            }
+        }
+
+        .menu {
+            position: absolute;
+            top: 0;
+            right: -50%;
+            background-color: black;
+            color: white;
+            height: 100vh;
+            width: 50%;
+            transition: right 0.3s ease-in-out;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            font-size: 30px;
+
+
+            &.active {
+                right: 0;
+            }
+
+            @include small_screen {
+                a {
+                    display: initial;
+                }
+            }
         }
     }
 }
